@@ -15,6 +15,7 @@ use Acme::CPANAuthors::Register(
 	'DANIELR' => 'Roman Daniel',
 	'DANPEDER' => 'Daniel Peder',
 	'DOUGLISH' => 'Dalibor Hořínek',
+	'DPOKORNY' => 'Dan Pokorny',
 	'HIHIK' => 'Jiří Václavík',
 	'HOLCAPEK' => 'Jan Holčapek',
 	'HPA' => 'Petr Vraník',
@@ -102,7 +103,7 @@ See documentation for L<Acme::CPANAuthors> for more details.
  print "Count of Czech CPAN authors: $count\n";
 
  # Output:
- # Count of Czech CPAN authors: 47
+ # Count of Czech CPAN authors: 48
 
 =head1 EXAMPLE2
 
@@ -130,46 +131,47 @@ See documentation for L<Acme::CPANAuthors> for more details.
  #     [4]  "DANIELR",
  #     [5]  "DANPEDER",
  #     [6]  "DOUGLISH",
- #     [7]  "HIHIK",
- #     [8]  "HOLCAPEK",
- #     [9]  "HPA",
- #     [10] "JANPAZ",
- #     [11] "JANPOM",
- #     [12] "JENDA",
- #     [13] "JIRA",
- #     [14] "JSPICAK",
- #     [15] "KLE",
- #     [16] "KOLCON",
- #     [17] "MAJLIS",
- #     [18] "MICHALS",
- #     [19] "MILSO",
- #     [20] "MJFO",
- #     [21] "PAJAS",
- #     [22] "PAJOUT",
- #     [23] "PASKY",
- #     [24] "PCIMPRICH",
- #     [25] "PEK",
- #     [26] "PETRIS",
- #     [27] "PKUBANEK",
- #     [28] "POPEL",
- #     [29] "PSME",
- #     [30] "RUR",
- #     [31] "RVASICEK",
- #     [32] "SARFY",
- #     [33] "SEIDLJAN",
- #     [34] "SKIM",
- #     [35] "SMRZ",
- #     [36] "STRAKA",
- #     [37] "TKR",
- #     [38] "TPODER",
- #     [39] "TRIPIE",
- #     [40] "TYNOVSKY",
- #     [41] "VARISD",
- #     [42] "VASEKD",
- #     [43] "YENYA",
- #     [44] "ZABA",
- #     [45] "ZEMAN",
- #     [46] "ZOUL"
+ #     [7]  "DPOKORNY",
+ #     [8]  "HIHIK",
+ #     [9]  "HOLCAPEK",
+ #     [10] "HPA",
+ #     [11] "JANPAZ",
+ #     [12] "JANPOM",
+ #     [13] "JENDA",
+ #     [14] "JIRA",
+ #     [15] "JSPICAK",
+ #     [16] "KLE",
+ #     [17] "KOLCON",
+ #     [18] "MAJLIS",
+ #     [19] "MICHALS",
+ #     [20] "MILSO",
+ #     [21] "MJFO",
+ #     [22] "PAJAS",
+ #     [23] "PAJOUT",
+ #     [24] "PASKY",
+ #     [25] "PCIMPRICH",
+ #     [26] "PEK",
+ #     [27] "PETRIS",
+ #     [28] "PKUBANEK",
+ #     [29] "POPEL",
+ #     [30] "PSME",
+ #     [31] "RUR",
+ #     [32] "RVASICEK",
+ #     [33] "SARFY",
+ #     [34] "SEIDLJAN",
+ #     [35] "SKIM",
+ #     [36] "SMRZ",
+ #     [37] "STRAKA",
+ #     [38] "TKR",
+ #     [39] "TPODER",
+ #     [40] "TRIPIE",
+ #     [41] "TYNOVSKY",
+ #     [42] "VARISD",
+ #     [43] "VASEKD",
+ #     [44] "YENYA",
+ #     [45] "ZABA",
+ #     [46] "ZEMAN",
+ #     [47] "ZOUL"
  # ]
 
 =head1 DEPENDENCIES
