@@ -1,6 +1,7 @@
 0.31
  - Add ATG CPAN account.
  - Add BULB CPAN account.
+ - Add DPOKORNY CPAN account.
  - Update Module::Install to 1.21 version.
  - Update copyright years.
 
